--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.4",
     "popper.js": "^1.12.9",
     "vee-validate": "^2.0.0",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "font-awesome": "^4.7.0"
   }
 }
