--- a/template/package.json
+++ b/template/package.json
@@ -17,12 +17,23 @@
     "bootstrap": "4.0.0-beta.3",
     "bootstrap-vue": "1.3.0",
     "cross-env": "^5.0.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "laravel-mix": "^1.7.2",
     "lodash": "^4.17.4",
     "popper.js": "^1.12.9",
     "vee-validate": "^2.0.0",
     "vue": "^2.1.10",
-    "font-awesome": "^4.7.0"
+    "vue-router": "^3.0.1",
+    "babel-eslint": "^8.1.2",
+    "eslint": "^4.14.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
