--- a/template/package.json
+++ b/template/package.json
@@ -15,10 +15,9 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "babel-eslint": "^8.1.2",
-    "bootstrap": "4.0.0-beta.3",
+    "bootstrap": "4.0.0",
     "bootstrap-vue": "1.3.0",
     "cross-env": "^5.0.1",
-    "moment": "^2.20.1",
     "eslint": "^4.14.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-friendly-formatter": "^3.0.0",
@@ -32,9 +31,11 @@
     "jquery": "^3.1.1",
     "laravel-mix": "^1.7.2",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "popper.js": "^1.12.9",
     "vee-validate": "^2.0.0",
     "vue": "^2.1.10",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "alertify.js": "^1.0.12"
   }
 }
